[package]
name = "vquery"
version = "0.1.0"
authors = ["r4v3n6101 <raven6107@gmail.com>"]
edition = "2021"

[dependencies]
bytes = "1.4.0"
bzip2 = "0.4.4"
crc = "3.0.1"
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["test-util", "rt", "macros"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
